--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlCadastros.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlCadastros.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CFP.App.Formularios.ModeloBase.UserControls.UserControlCadastros"
+﻿<UserControl x:Name="ucBotoesCadastros" x:Class="CFP.App.Formularios.ModeloBase.UserControls.UserControlCadastros"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,33 +6,35 @@
              xmlns:local="clr-namespace:CFP.App.Formularios.ModeloBase.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Margin="160 80 160 80">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+    <Grid>
+        <Grid x:Name="GridBotoesCadastros" VerticalAlignment="Top" Height="60" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
-        </Grid.RowDefinitions>
-        <Button x:Name="btPessoa" 
+            <Button x:Name="btPessoa" 
                 Margin="5,10,5,9.8" Grid.Column="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Pessoas" Foreground="#FFFCF9F9" Height="Auto" />
-        <Button x:Name="btTipoRenda" 
+            <Button x:Name="btTipoRenda" 
                 Margin="5,10,5,9.8" Grid.Column="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Tipos de Renda" Foreground="#FFFCF9F9" Height="Auto"/>
-        <Button x:Name="btTipoGasto"
-                Margin="5,10.2,5,9.6" Grid.Column="0" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
+            <Button x:Name="btTipoGasto"
+                Margin="5,10.2,5,9.6" Grid.Column="3" Grid.Row="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Tipos de Gasto" Foreground="#FFFCF9F9" Height="Auto" />
-        <Button x:Name="btFormaPagamento"
-                Margin="5,10.2,5,9.6" Grid.Column="1" Grid.Row="1" Background="#FF1B3861" VerticalAlignment="Stretch" 
+            <Button x:Name="btFormaPagamento"
+                Margin="5,10.2,5,9.6" Grid.Column="4" Grid.Row="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Formas de Pagamento" Foreground="#FFFCF9F9" Click="btFormaPagamento_Click" Height="Auto" />
-        <Button x:Name="btUsuario"
+            <Button x:Name="btUsuario"
                 Margin="5,10,5,9.8" Grid.Column="2" Grid.Row="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Usuários" Foreground="#FFFCF9F9" Height="Auto" />
-
+        </Grid>
+        
+        <Grid x:Name="GridCadastros" Margin="0,60,0,-0.4">
+            <StackPanel x:Name="panelCadastros" VerticalAlignment="Stretch"/>
+        </Grid>
     </Grid>
 </UserControl>
