--- a/CFP.App/Formularios/ModeloBase/UserControls/UserControlCadastros.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/UserControlCadastros.xaml
@@ -6,8 +6,12 @@
              xmlns:local="clr-namespace:CFP.App.Formularios.ModeloBase.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid x:Name="GridBotoesCadastros" VerticalAlignment="Top" Height="60" >
+    <Grid x:Name="GridGeral">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="7*"/>
+            <RowDefinition Height="218*"/>
+        </Grid.RowDefinitions>
+        <Grid x:Name="GridBotoesCadastros" VerticalAlignment="Center" Height="100" Grid.RowSpan="2" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -24,7 +28,7 @@
                 FontSize="16" Content="Tipos de Renda" Foreground="#FFFCF9F9" Height="Auto"/>
             <Button x:Name="btTipoGasto"
                 Margin="5,10.2,5,9.6" Grid.Column="3" Grid.Row="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
-                FontSize="16" Content="Tipos de Gasto" Foreground="#FFFCF9F9" Height="Auto" />
+                FontSize="16" Content="Tipos de Gasto" Foreground="#FFFCF9F9" Height="Auto" Click="btTipoGasto_Click" />
             <Button x:Name="btFormaPagamento"
                 Margin="5,10.2,5,9.6" Grid.Column="4" Grid.Row="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Formas de Pagamento" Foreground="#FFFCF9F9" Click="btFormaPagamento_Click" Height="Auto" />
@@ -32,9 +36,6 @@
                 Margin="5,10,5,9.8" Grid.Column="2" Grid.Row="0" Background="#FF1B3861" VerticalAlignment="Stretch" 
                 FontSize="16" Content="Usuários" Foreground="#FFFCF9F9" Height="Auto" />
         </Grid>
-        
-        <Grid x:Name="GridCadastros" Margin="0,60,0,-0.4">
-            <StackPanel x:Name="panelCadastros" VerticalAlignment="Stretch"/>
-        </Grid>
+        <StackPanel x:Name="panelCadastros" Width="auto" Height="auto" Grid.RowSpan="2"/>
     </Grid>
 </UserControl>
