--- a/CFP.App/Formularios/ModeloBase/UserControls/userControlBaseFormularios.xaml
+++ b/CFP.App/Formularios/ModeloBase/UserControls/userControlBaseFormularios.xaml
@@ -1,16 +1,16 @@
-﻿<UserControl x:Class="CFP.App.Formularios.Cadastros.UserControlCadastroFormaPagamento"
+﻿<UserControl x:Class="CFP.App.Formularios.ModeloBase.UserControls.userControlBaseFormularios"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CFP.App.Formularios.Cadastros"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:CFP.App.Formularios.ModeloBase.UserControls"
+              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" d:DesignWidth="800" Height="600">
     <Grid  >
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
             <RowDefinition Height="530"/>
-
+            
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="#FF1F3D68">
             <Button x:Name="btPesquisar" 
@@ -68,48 +68,12 @@
             </Button>
         </Grid>
         <Grid x:Name="GridCampos" Background="LightGray" Grid.Row="1" >
-            <TextBlock x:Name="lblNomeTela" Text="Forma de Pagamento" 
+            <TextBlock x:Name="lblNomeTela" Text="Nome da Tela" 
                        HorizontalAlignment="Left" 
                        VerticalAlignment="Top" 
                        FontSize="12"
                       Foreground="#FF1F3D68"
-                       Margin="5,5,0,0"/>
-            <Grid Margin="70">
-                <TextBox
-                    x:Name="txtNome"
-                     materialDesign:HintAssist.Hint="Nome" 
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68"  
-                     VerticalAlignment="Top"/>
-                <TextBox  
-                    x:Name="txtQtdParcelas"
-                     materialDesign:HintAssist.Hint="Qtd Parcelas" 
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,54,0,274"  
-                     />
-                <TextBox 
-                    x:Name="txtDiasVencimento"
-                     materialDesign:HintAssist.Hint="Dias para Vencimento" 
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,121,10,207"  
-                     />
-                <ComboBox 
-                    x:Name="cmbSituacao"
-                     materialDesign:HintAssist.Hint="Situação" 
-                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,188,0,148"  
-                     />
-            </Grid>
-
-
+                       Margin="5"/>
         </Grid>
     </Grid>
 </UserControl>
