--- a/CFP.App/Formularios/Cadastros/UserControlPessoa.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlPessoa.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="CFP.App.Formularios.Cadastros.UserControlCadastroFormaPagamento"
+﻿<UserControl x:Class="CFP.App.Formularios.Cadastros.UserControlPessoa"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CFP.App.Formularios.Cadastros"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" d:DesignWidth="800" Height="600">
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="800">
     <Grid  >
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
@@ -68,13 +69,13 @@
             </Button>
         </Grid>
         <Grid x:Name="GridCampos" Background="LightGray" Grid.Row="1" >
-            <TextBlock x:Name="lblNomeTela" Text="Forma de Pagamento" 
+            <TextBlock x:Name="lblNomeTela" Text="Pessoa" 
                        HorizontalAlignment="Left" 
                        VerticalAlignment="Top" 
                        FontSize="12"
-                      Foreground="#FF1F3D68"
+                       Foreground="#FF1F3D68"
                        Margin="5,5,0,0"/>
-            <Grid Margin="70">
+            <Grid Margin="30">
                 <TextBox
                     x:Name="txtNome"
                      materialDesign:HintAssist.Hint="Nome" 
@@ -83,33 +84,45 @@
                      FontSize="22" 
                      Foreground="#FF1F3D68"  
                      VerticalAlignment="Top"/>
-                <TextBox  
-                    x:Name="txtQtdParcelas"
-                     materialDesign:HintAssist.Hint="Qtd Parcelas" 
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,54,0,274"  
-                     />
-                <TextBox 
-                    x:Name="txtDiasVencimento"
-                     materialDesign:HintAssist.Hint="Dias para Vencimento" 
-                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,121,0,206.6"  
-                     />
+
+
+
                 <ComboBox 
                     x:Name="cmbSituacao"
                      materialDesign:HintAssist.Hint="Situação" 
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,188,0,148"  
+                     Foreground="#FF1F3D68" Margin="0,59,0,358.6"  
                      />
+
+                <ComboBox 
+                    x:Name="cmbRenda"
+                     materialDesign:HintAssist.Hint="Renda" 
+                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                     FontFamily="Champagne &amp; Limousines" 
+                     FontSize="22" 
+                     Foreground="#FF1F3D68" Margin="0,116,0,300.6"  
+                     />
+                
+                <DataGrid 
+                    x:Name="DataGridRendas" 
+                     Style="{StaticResource MaterialDesignDataGrid}"
+                    Margin="0,174,0,0" 
+                    Height="166" 
+                    VerticalAlignment="Top"/>
+
+                <TextBox
+                    x:Name="txtTotalRenda"
+                     materialDesign:HintAssist.Hint="Total de Renda" 
+                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                     FontFamily="Champagne &amp; Limousines" 
+                     FontSize="22" 
+                     Foreground="#FF1F3D68"  
+                     VerticalAlignment="Bottom"
+                    IsReadOnly="True" Margin="0,0,0,69.6"/>
+
             </Grid>
-
-
         </Grid>
     </Grid>
 </UserControl>
