--- a/CFP.App/Formularios/Principais/Principal.xaml
+++ b/CFP.App/Formularios/Principais/Principal.xaml
@@ -123,7 +123,7 @@
                     <ListViewItem Height="60">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon 
-                                Kind="Pencil" 
+                                Kind="Add" 
                                 Width="25" 
                                 Height="25" 
                                 Margin="10" 
