--- a/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="CFP.App.Formularios.Cadastros.UserControlCadastroFormaPagamento"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CFP.App.Formularios.Cadastros"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" d:DesignWidth="800" Height="600">
+             xmlns:ObjetoValor="clr-namespace:Dominio.ObjetoValor;assembly=CFP.Dominio" x:Class="CFP.App.Formularios.Cadastros.UserControlCadastroFormaPagamento"
+             mc:Ignorable="d" d:DesignWidth="800" Height="600" Loaded="UserControl_Loaded">
     <Grid  >
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
@@ -19,37 +20,46 @@
                     Height="60" 
                     Width="60" 
                     HorizontalAlignment="Left" 
-                    Background="#FF1F3D68">
+                    Background="#FF1F3D68"
+                    ToolTip="Pesquisar">
                 <materialDesign:PackIcon 
                     Kind="Search"  
                     Width="50" 
                     Height="50"/>
             </Button>
-            <TextBox Margin="75,10,636,0" 
+            <TextBox x:Name="txtCodigo"
+                     Margin="75,10,636,0" 
                      materialDesign:HintAssist.Hint="Código" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="15" 
                      Foreground="White"  
-                     VerticalAlignment="Top"/>
-            <Button x:Name="btOk" 
+                     VerticalAlignment="Top" 
+                     KeyDown="txtCodigo_KeyDown" 
+                     PreviewTextInput="txtCodigo_PreviewTextInput" 
+                     PreviewKeyDown="txtCodigo_PreviewKeyDown" 
+                     MaxLength="10"/>
+            <Button x:Name="btExcluir" 
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}"
                     Height="60" 
                     Width="60"
                     Background="#FF1F3D68" 
-                    Margin="0,5,72,5" 
-                    HorizontalAlignment="Right">
+                    Margin="0,5,72,0" 
+                    HorizontalAlignment="Right" 
+                    VerticalAlignment="Top"
+                    ToolTip="Excluir">
                 <materialDesign:PackIcon 
                     Kind="Trash"  
                     Width="50" 
                     Height="50"/>
             </Button>
-            <Button x:Name="btExcluir"
+            <Button x:Name="btSalvar"
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="60" Width="60" 
                     Background="#FF1F3D68" 
                     Margin="0,5,137,5"
-                    HorizontalAlignment="Right">
+                    HorizontalAlignment="Right"
+                    ToolTip="Salvar">
                 <materialDesign:PackIcon 
                     Kind="ContentSave"  
                     Width="50" 
@@ -60,7 +70,9 @@
                     Height="60" Width="60" 
                     Background="#FF1F3D68" 
                     Margin="0,5,4,5" 
-                    HorizontalAlignment="Right" Click="btCancelar_Click">
+                    HorizontalAlignment="Right" 
+                    Click="btCancelar_Click"
+                    ToolTip="Cancelar/Sair">
                 <materialDesign:PackIcon 
                     Kind="ExitToApp"  
                     Width="50" 
@@ -74,7 +86,7 @@
                        FontSize="12"
                       Foreground="#FF1F3D68"
                        Margin="5,5,0,0"/>
-            <Grid Margin="70">
+            <Grid x:Name="GridControls" Margin="70">
                 <TextBox
                     x:Name="txtNome"
                      materialDesign:HintAssist.Hint="Nome" 
@@ -82,31 +94,34 @@
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
                      Foreground="#FF1F3D68"  
-                     VerticalAlignment="Top"/>
+                     VerticalAlignment="Top"
+                     MaxLength="70"/>
                 <TextBox  
                     x:Name="txtQtdParcelas"
                      materialDesign:HintAssist.Hint="Qtd Parcelas" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,54,0,274"  
-                     />
+                     Foreground="#FF1F3D68" Margin="0,54,0,274" PreviewTextInput="txtQtdParcelas_PreviewTextInput" PreviewKeyDown="txtQtdParcelas_PreviewKeyDown"  
+                     MaxLength="3"
+                    />
                 <TextBox 
                     x:Name="txtDiasVencimento"
                      materialDesign:HintAssist.Hint="Dias para Vencimento" 
                      Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,121,0,206.6"  
-                     />
+                     Foreground="#FF1F3D68" Margin="0,121,0,206.6" PreviewTextInput="txtDiasVencimento_PreviewTextInput" PreviewKeyDown="txtDiasVencimento_PreviewKeyDown"  
+                     MaxLength="3"
+                    />
                 <ComboBox 
                     x:Name="cmbSituacao"
                      materialDesign:HintAssist.Hint="Situação" 
                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                      FontFamily="Champagne &amp; Limousines" 
                      FontSize="22" 
-                     Foreground="#FF1F3D68" Margin="0,188,0,148"  
-                     />
+                     Foreground="#FF1F3D68" Margin="0,188,0,148">
+                </ComboBox>
             </Grid>
 
 
