Inclusao concluida, validações e controles da interface feitas e testadas.

--- a/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
@@ -59,7 +59,7 @@
                     Background="#FF1F3D68" 
                     Margin="0,5,137,5"
                     HorizontalAlignment="Right"
-                    ToolTip="Salvar">
+                    ToolTip="Salvar" Click="btSalvar_Click">
                 <materialDesign:PackIcon 
                     Kind="ContentSave"  
                     Width="50" 
